# shaderbox

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
