[package]
name = "shaderbox"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = ["async"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"